# nl-dates

./: .gitignore  README.md  manual_test.py  pyproject.toml  tessl.json
.cursor/: worktrees.json
docs/: index.md  tile.json
src/nl_dates/: __init__.py  llm.py  parser.py
tests/: test_nl_dates.py
