[project]
name = "nl-dates"
version = "0.1.0"
description = "A library for parsing natural language date strings into ISO datetime format"
readme = "README.md"
authors = [
    { email = "dru@drufball.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
